@@ -1,8 +1,10 @@
 package com.kosh.backend.controller;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
@@ -15,7 +17,9 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
+import com.kosh.backend.model.Network;
 import com.kosh.backend.model.User;
+import com.kosh.backend.repository.NetworkRepository;
 import com.kosh.backend.repository.UserRepository;
 
 @RestController
@@ -23,26 +27,89 @@ import com.kosh.backend.repository.UserRepository;
 public class UserController {
 
     private final UserRepository repo;
+    private final NetworkRepository networkRepo;
 
-    public UserController(UserRepository repo) {
+    public UserController(UserRepository repo, NetworkRepository networkRepo) {
         this.repo = repo;
+        this.networkRepo = networkRepo;
     }
 
-   @PostMapping
-    public User createUser(
+    @PostMapping
+    public ResponseEntity<?> createUser(
             @RequestParam("name") String name,
             @RequestParam("email") String email,
             @RequestParam("phone") String phone,
             @RequestParam("role") String role,
             @RequestParam("sahakari") String sahakari,
             @RequestParam("password") String password,
-            @RequestParam(value = "status", required = false) String status,  // ⭐ Removed defaultValue
+            @RequestParam(value = "status", required = false) String status,
             @RequestParam(value = "document", required = false) MultipartFile document) {
-        
+
         System.out.println("POST /api/users hit!");
-        System.out.println("Received user: " + name + ", " + email);
-        System.out.println("Status parameter received: " + status);
-        
+        System.out.println("User: " + name + ", " + email);
+        System.out.println("Role: " + role + ", Sahakari: " + sahakari);
+
+        // ---------------------------------------------------------
+        // ⭐ FIND NETWORK FIRST
+        // ---------------------------------------------------------
+        Network network = networkRepo.findAll().stream()
+                .filter(n -> sahakari.equalsIgnoreCase(n.getName()))
+                .findFirst()
+                .orElse(null);
+
+        if (network == null) {
+            return ResponseEntity.badRequest()
+                    .body(Map.of("error", "Network not found: " + sahakari));
+        }
+
+        // ---------------------------------------------------------
+        // ⭐ MEMBER LIMIT VALIDATION (Using DB userLimit field)
+        // ---------------------------------------------------------
+        if ("member".equalsIgnoreCase(role)) {
+            Integer maxMembers = network.getUserLimit();
+
+            // Only check limit if userLimit is set (not null and not 0)
+            if (maxMembers != null && maxMembers > 0) {
+                long currentMembers = repo.findAll().stream()
+                        .filter(u -> "member".equalsIgnoreCase(u.getRole()))
+                        .filter(u -> sahakari.equalsIgnoreCase(u.getSahakari()))
+                        .filter(u -> "Active".equals(u.getStatus()))
+                        .count();
+
+                System.out.println("Current members: " + currentMembers + " / " + maxMembers);
+
+                if (currentMembers >= maxMembers) {
+                    return ResponseEntity.badRequest()
+                            .body(Map.of(
+                                    "error", "Member limit reached. This network allows only " +
+                                            maxMembers + " members."));
+                }
+            } else {
+                System.out.println("No member limit set for this network (unlimited)");
+            }
+        }
+
+        // ---------------------------------------------------------
+        // ⭐ ADMIN LIMIT VALIDATION (unchanged)
+        // ---------------------------------------------------------
+        if ("admin".equalsIgnoreCase(role)) {
+            long currentAdminCount = repo.findAll().stream()
+                    .filter(u -> "admin".equalsIgnoreCase(u.getRole()))
+                    .filter(u -> sahakari.equals(u.getSahakari()))
+                    .filter(u -> "Active".equals(u.getStatus()))
+                    .count();
+
+            if (network.getAdminLimit() != null && currentAdminCount >= network.getAdminLimit()) {
+                return ResponseEntity.badRequest()
+                        .body(Map.of(
+                                "error", "Admin limit reached for " + sahakari +
+                                        ". Maximum allowed: " + network.getAdminLimit()));
+            }
+        }
+
+        // ---------------------------------------------------------
+        // ⭐ CREATE USER
+        // ---------------------------------------------------------
         User user = new User();
         user.setName(name);
         user.setEmail(email);
@@ -50,29 +117,20 @@ public class UserController {
         user.setRole(role);
         user.setSahakari(sahakari);
         user.setPassword(password);
-        
-        // ⭐ Set status: use provided value, or default to "Pending" if not provided
-        if (status != null && !status.trim().isEmpty()) {
-            user.setStatus(status);
-            System.out.println("Setting user status to: " + status);
-        } else {
-            user.setStatus("Pending");
-            System.out.println("Setting user status to: Pending (default)");
-        }
-        
-        // Handle document if needed
+
+        user.setStatus((status != null && !status.isBlank()) ? status : "Pending");
+
         if (document != null && !document.isEmpty()) {
-            System.out.println("Document received: " + document.getOriginalFilename());
-            // TODO: Save the document file to storage and store the path/URL in the user object
-            // user.setDocumentPath(savedPath);
+            System.out.println("Received document: " + document.getOriginalFilename());
         }
-        
+
         User saved = repo.save(user);
-        System.out.println("Saved user with ID: " + saved.getId());
-        System.out.println("Saved user status: " + saved.getStatus());
-        return saved;
+        return ResponseEntity.ok(saved);
     }
 
+    // ---------------------------------------------------------
+    // REST OF ENDPOINTS
+    // ---------------------------------------------------------
 
     @GetMapping("/pending")
     public List<User> getPendingUsers(@RequestParam String sahakari) {
@@ -87,34 +145,139 @@ public class UserController {
     }
 
     @PutMapping("/{id}")
-    public User updateUser(@PathVariable int id, @RequestBody User updatedUser) {
-        // Fetch the existing user from database
+    public ResponseEntity<?> updateUser(@PathVariable int id, @RequestBody User updatedUser) {
         User existingUser = repo.findById(id)
                 .orElseThrow(() -> new RuntimeException("User not found with id: " + id));
-        
-        // Update all fields *except* password
+
+        boolean isBecomingAdmin = "admin".equalsIgnoreCase(updatedUser.getRole()) &&
+                !"admin".equalsIgnoreCase(existingUser.getRole());
+        boolean isAdminChangingSahakari = "admin".equalsIgnoreCase(updatedUser.getRole()) &&
+                !existingUser.getSahakari().equals(updatedUser.getSahakari());
+        boolean isBecomingMember = "member".equalsIgnoreCase(updatedUser.getRole()) &&
+                !"member".equalsIgnoreCase(existingUser.getRole());
+        boolean isMemberChangingSahakari = "member".equalsIgnoreCase(updatedUser.getRole()) &&
+                !existingUser.getSahakari().equals(updatedUser.getSahakari());
+
+        // Check admin limit
+        if (isBecomingAdmin || isAdminChangingSahakari) {
+            String targetSahakari = updatedUser.getSahakari();
+            Network network = networkRepo.findAll().stream()
+                    .filter(n -> targetSahakari.equals(n.getName()))
+                    .findFirst()
+                    .orElse(null);
+
+            if (network == null) {
+                return ResponseEntity.badRequest()
+                        .body(Map.of("error", "Network not found: " + targetSahakari));
+            }
+
+            long currentAdminCount = repo.findAll().stream()
+                    .filter(u -> u.getId() != id)
+                    .filter(u -> "admin".equalsIgnoreCase(u.getRole()))
+                    .filter(u -> targetSahakari.equals(u.getSahakari()))
+                    .filter(u -> "Active".equals(u.getStatus()))
+                    .count();
+
+            if (network.getAdminLimit() != null && currentAdminCount >= network.getAdminLimit()) {
+                return ResponseEntity.badRequest()
+                        .body(Map.of("error", "Admin limit reached"));
+            }
+        }
+
+        // Check member limit
+        if (isBecomingMember || isMemberChangingSahakari) {
+            String targetSahakari = updatedUser.getSahakari();
+            Network network = networkRepo.findAll().stream()
+                    .filter(n -> targetSahakari.equals(n.getName()))
+                    .findFirst()
+                    .orElse(null);
+
+            if (network == null) {
+                return ResponseEntity.badRequest()
+                        .body(Map.of("error", "Network not found: " + targetSahakari));
+            }
+
+            Integer maxMembers = network.getUserLimit();
+
+            if (maxMembers != null && maxMembers > 0) {
+                long currentMembers = repo.findAll().stream()
+                        .filter(u -> u.getId() != id)
+                        .filter(u -> "member".equalsIgnoreCase(u.getRole()))
+                        .filter(u -> targetSahakari.equals(u.getSahakari()))
+                        .filter(u -> "Active".equals(u.getStatus()))
+                        .count();
+
+                if (currentMembers >= maxMembers) {
+                    return ResponseEntity.badRequest()
+                            .body(Map.of("error", "Member limit reached"));
+                }
+            }
+        }
+
         existingUser.setName(updatedUser.getName());
         existingUser.setEmail(updatedUser.getEmail());
         existingUser.setPhone(updatedUser.getPhone());
         existingUser.setRole(updatedUser.getRole());
         existingUser.setSahakari(updatedUser.getSahakari());
         existingUser.setStatus(updatedUser.getStatus());
-        
-        // --- THIS IS THE FIX ---
-        // Only update the password if a new, non-empty password is provided
-        // This check prevents a null or blank password from overwriting the existing one
+
         if (updatedUser.getPassword() != null && !updatedUser.getPassword().isEmpty()) {
             existingUser.setPassword(updatedUser.getPassword());
         }
-        
-        return repo.save(existingUser);
+
+        return ResponseEntity.ok(repo.save(existingUser));
     }
 
     @PatchMapping("/{id}/approve")
-    public User approveUser(@PathVariable int id) {
+    public ResponseEntity<?> approveUser(@PathVariable int id) {
         User user = repo.findById(id).orElseThrow();
+
+        Network network = networkRepo.findAll().stream()
+                .filter(n -> user.getSahakari().equals(n.getName()))
+                .findFirst()
+                .orElse(null);
+
+        if (network == null) {
+            return ResponseEntity.badRequest()
+                    .body(Map.of("error", "Network not found"));
+        }
+
+        // Check admin limit for admin users
+        if ("admin".equalsIgnoreCase(user.getRole())) {
+            long currentAdminCount = repo.findAll().stream()
+                    .filter(u -> u.getId() != id)
+                    .filter(u -> "admin".equalsIgnoreCase(u.getRole()))
+                    .filter(u -> user.getSahakari().equals(u.getSahakari()))
+                    .filter(u -> "Active".equals(u.getStatus()))
+                    .count();
+
+            if (network.getAdminLimit() != null && currentAdminCount >= network.getAdminLimit()) {
+                return ResponseEntity.badRequest()
+                        .body(Map.of("error", "Admin limit reached"));
+            }
+        }
+
+        // Check member limit for member users
+        if ("member".equalsIgnoreCase(user.getRole())) {
+            Integer maxMembers = network.getUserLimit();
+
+            if (maxMembers != null && maxMembers > 0) {
+                long currentMembers = repo.findAll().stream()
+                        .filter(u -> u.getId() != id)
+                        .filter(u -> "member".equalsIgnoreCase(u.getRole()))
+                        .filter(u -> user.getSahakari().equals(u.getSahakari()))
+                        .filter(u -> "Active".equals(u.getStatus()))
+                        .count();
+
+                if (currentMembers >= maxMembers) {
+                    return ResponseEntity.badRequest()
+                            .body(Map.of("error", "Member limit reached"));
+                }
+            }
+        }
+
         user.setStatus("Active");
-        return repo.save(user);
+        return ResponseEntity.ok(repo.save(user));
     }
 
     @PatchMapping("/{id}/reject")
@@ -124,17 +287,16 @@ public class UserController {
         return repo.save(user);
     }
 
-
     @DeleteMapping("/{id}")
     public void deleteUser(@PathVariable int id) {
         repo.deleteById(id);
     }
+
     @GetMapping
     public List<User> getAllUsers(
             @RequestParam(value = "search", required = false) String search) {
-        
+
         if (search != null && !search.isEmpty()) {
-            System.out.println("Searching users for: " + search);
             return repo.findByNameContainingIgnoreCase(search);
         } else {
             return repo.findAll();
